test/haskell2010/conformance/negative/impossible-case-pattern.hs
module Main where

main = case True of
  1 -> 0
  False -> 1
